<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GroupEditActivity">

    <FrameLayout
        android:id="@+id/group_edit_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/group_edit_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/app_name"
        android:inputType="text"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/group_edit_button_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messages"
        app:layout_constraintTop_toBottomOf="@id/group_edit_edittext_name" />

    <Button
        android:id="@+id/group_edit_button_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        app:layout_constraintTop_toBottomOf="@id/group_edit_button_messages" />

    <Button
        android:id="@+id/group_edit_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/group_edit_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>